--- a/examples/demo/platformio.ini
+++ b/examples/demo/platformio.ini
@@ -1,11 +1,23 @@
-[env:esp32-max7219]
+[env:esp32dev-arduino]
 platform = espressif32
-board = node32s
+board = esp32dev
 framework = arduino
-monitor_speed = 115200
-upload_speed = 921600
-build_unflags=-std=gnu++11
-build_flags=-std=gnu++14
-lib_deps = 
-	codewitch-honey-crisis/htcw_max7219@^1.1.1
-lib_ldf_mode = deep
+upload_speed=921600
+monitor_speed=115200
+monitor_filters = esp32_exception_decoder
+build_unflags = -std=gnu++11
+build_flags = -std=gnu++17
+lib_deps =
+  codewitch-honey-crisis/htcw_gfx
+  
+[env:esp32dev-espidf]
+platform = espressif32
+board = esp32dev
+framework = espidf
+upload_port=COM21 ; where XX is your num
+monitor_port=COM21 ; same num
+monitor_filters = esp32_exception_decoder
+build_unflags = -std=gnu++11
+build_flags = -std=gnu++17
+lib_deps =
+  codewitch-honey-crisis/htcw_gfx
