--- a/examples/demo/platformio.ini
+++ b/examples/demo/platformio.ini
@@ -9,6 +9,7 @@ build_unflags = -std=gnu++11
 build_flags = -std=gnu++17
 lib_deps =
   codewitch-honey-crisis/htcw_gfx
+  codewitch-honey-crisis/htcw_max7219
   
 [env:esp32dev-espidf]
 platform = espressif32
@@ -21,3 +22,4 @@ build_unflags = -std=gnu++11
 build_flags = -std=gnu++17
 lib_deps =
   codewitch-honey-crisis/htcw_gfx
+  codewitch-honey-crisis/htcw_max7219
